# novel_assiment_gemini

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  big_structure.md  bug_report.txt  next_agent.md  restructure_plan.md  stop.bat  test.ipynb  test.py
.ipynb_checkpoints/: app-checkpoint.py  requirements-checkpoint.txt  test-checkpoint.ipynb
SideBySide/: start.bat
SideBySide/backend/: pyproject.toml  requirements.txt
SideBySide/backend/app/: main.py
SideBySide/backend/app/api/: endpoints.py
SideBySide/backend/app/llm/: gemini_client.py
SideBySide/backend/app/rag/: chroma_service.py
SideBySide/backend/app/services/: document_processor.py  file_watcher.py
SideBySide/backend/tests/: test_analyze_stream.py  test_config.py  test_document_processor.py  test_gemini.py  test_rag.py  test_reader.py  test_text.txt  test_watcher.py
SideBySide/docs/: architecture.md  decision_record_why_markdown.md  development_progress.md  implementation_plan.md  markdown_converter_comparison_zh.md  market_research_analysis.md  market_research_findings.md  market_research_questionnaire.md  postmortem_background_js_field_mismatch.md  prd.md
SideBySide/frontend/: next.config.js  package-lock.json  package.json  preload.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.js  vitest.config.ts  vitest.setup.js
backend/: app.py
backend/api/: main.py
backend/docs/: Feature-Effort-Assessment.md  market-research.md  (+1 more)
docs/: prd.md  testing-and-deployment.md
frontend/: package-lock.json
legacy_v1/: package-lock.json  package.json  start.bat  user_guide.md
(+74 files in other folders)
