[tool.poetry]
name = "side-by-side-backend"
version = "0.1.0"
description = "Backend for Side-by-Side Companion App"
authors = ["Dominic <user@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
chromadb = "^0.4.22"
google-generativeai = "^0.3.2"
httpx = "^0.26.0"
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
